i915: And remember assign the new value to the state reg...

Fixes regression from 298ebb78de8a6b6edf0aa0fe8d784d00bbc2930e.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=34589
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>